# capsa

./: .gitignore  ARCHITECTURE_FEEDBACK.md  CLAUDE.md  Cargo.toml  DESIGN.md  FEEDBACK.md  NETWORKING.md  TODO.md  devenv.nix  test-vms-x86_64.nix  test-vms.nix
.cargo/: config.toml
.github/workflows/: ci.yml
crates/: README.md
crates/apple/: README.md
crates/apple/vz/: Cargo.toml
crates/apple/vz/src/: backend.rs  delegate.rs  handle.rs  lib.rs  vm.rs  vsock.rs
crates/apple/vzd/: Cargo.toml
crates/apple/vzd-ipc/: Cargo.toml
crates/apple/vzd-ipc/src/: lib.rs  transport.rs
crates/apple/vzd/src/: console.rs  main.rs  network.rs  server.rs  tests.rs
crates/capsa/: Cargo.toml  build.rs
crates/capsa-apple-vzd/: Cargo.toml
crates/capsa-apple-vzd-ipc/: Cargo.toml
crates/capsa-apple-vzd-ipc/src/: lib.rs
crates/capsa-apple-vzd/src/: main.rs
crates/capsa-backend-native/: Cargo.toml
crates/capsa-backend-native/src/: lib.rs
crates/capsa-cli/: Cargo.toml
crates/capsa-cli/src/: main.rs
crates/capsa-core/src/: backend.rs  lib.rs
crates/capsa-core/src/boot/: mod.rs
crates/capsa-core/src/types/: network.rs  share.rs
crates/capsa/benches/: boot.rs  ipc_overhead.rs
crates/capsa/src/: capabilities.rs  cluster.rs  config.rs  console.rs  error.rs  handle.rs  lib.rs  test_utils.rs  vsock.rs
crates/capsa/src/backend/: mod.rs  subprocess.rs  vfkit.rs  virtualization.rs
crates/capsa/src/backend/linux/: kvm.rs  mod.rs
crates/capsa/src/backend/macos/: capabilities.rs  cmdline.rs  mod.rs  pty.rs
crates/capsa/src/backend/macos/strategy/: mod.rs  native.rs  subprocess.rs  vfkit.rs
crates/capsa/src/boot/: mod.rs
crates/capsa/src/boot/linux/: cmdline.rs  config.rs
crates/capsa/src/builder/: boot_configs.rs  linux.rs  mod.rs  vm_builder.rs
crates/capsa/src/guides/: console_automation.md  getting_started.md  mod.rs  shared_directories.md  vm_pools.md
crates/capsa/src/pool/: mod.rs  poolable.rs
crates/capsa/src/sandbox/: builder.rs  client.rs  config.rs  mod.rs
crates/capsa/src/types/: console.rs  disk.rs  mod.rs  network.rs  share.rs
crates/capsa/tests/: PORT_FORWARDING.md  boot_test.rs  cluster_test.rs  console_stress_test.rs  console_test.rs  disk_test.rs  network_test.rs  pool_test.rs  sandbox_test.rs  share_test.rs  uefi_boot_test.rs  vsock_test.rs
crates/cli/: Cargo.toml
crates/cli/src/: console.rs  main.rs
crates/cli/src/commands/: backends.rs  mod.rs  run.rs  version.rs
crates/core/: Cargo.toml
crates/core/src/: async_fd.rs  backend.rs  capabilities.rs  error.rs  lib.rs  macos.rs  vsock.rs
crates/core/src/boot/: cmdline.rs  config.rs  mod.rs
crates/core/src/types/: cluster.rs  console.rs  disk.rs  mod.rs  network.rs  share.rs
crates/linux/kvm/: Cargo.toml
crates/linux/kvm/src/: handle.rs  lib.rs  serial.rs  virtio.rs  virtio_console.rs  virtio_net.rs  virtio_vsock.rs  vm.rs  vsock_bridge.rs
crates/linux/kvm/src/arch/: mod.rs
crates/linux/kvm/src/arch/x86_64/: boot_params.rs  memory.rs  mod.rs  mptable.rs  serial.rs  vcpu.rs
crates/linux/kvm/src/fuse/: handle.rs  inode.rs  mod.rs  protocol.rs
crates/linux/kvm/src/virtio/: common.rs  console.rs  fs.rs  mod.rs  net.rs  vsock.rs
crates/linux/kvm/tests/: boot_test.rs  network_test.rs
crates/net/: Cargo.toml
crates/net/src/: bridge.rs  cluster_stack.rs  device.rs  dhcp.rs  dns_cache.rs  dns_proxy.rs  error.rs  frame_io.rs  lib.rs  nat.rs  policy.rs  port_forward.rs  socketpair.rs  stack.rs  switch.rs  tap.rs
crates/sandbox/agent/: Cargo.toml
crates/sandbox/agent/src/: main.rs
crates/sandbox/init/: Cargo.toml
crates/sandbox/init/src/: cmdline.rs  main.rs
crates/sandbox/protocol/: Cargo.toml
crates/sandbox/protocol/src/: lib.rs
crates/test-utils/vsock-pong/: Cargo.toml
crates/test-utils/vsock-pong/src/: main.rs
docs/: console-automation-investigation.md  known-issues.md  known-network-issues.md
docs/design/: 01-capsa-sandbox.md  01-device-vs-mount-separation.md  02-device-vs-mount-separation.md  02-virtio-fs-uid-mapping.md  03-capsa-sandbox.md  03-virtio-fs-uid-mapping.md  capsa-sandbox.md  device-vs-mount-separation.md  domain-filtering.md  virtio-fs-uid-mapping.md
nix/test-vms/: aarch64.nix  default.nix  lib.nix  x86_64.nix
test-programs/: vsock-pong.c
