[workspace]
resolver = "2"
members = ["crates/capsa", "crates/capsa-cli", "crates/capsa-apple-vzd", "crates/capsa-apple-vzd-ipc", "crates/capsa-core", "crates/capsa-backend-native"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/luiz/capsa"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
thiserror = "2"
which = "7"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
nix = { version = "0.29", features = ["fs"] }
