[package]
name = "capsa"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A cross-platform VM runtime library for secure workload isolation"

[dependencies]
capsa-core = { path = "../capsa-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0", optional = true }
apple-main = { git = "https://github.com/luizribeiro/apple-main", rev = "6f9e44b", optional = true, features = ["unstable-test-framework"] }
capsa-apple-vzd-ipc = { path = "../capsa-apple-vzd-ipc", optional = true }
tarpc = { version = "0.35", features = ["serde1", "tokio1", "serde-transport", "serde-transport-bincode"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
tokio-serde = { version = "0.9", features = ["bincode"], optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "fs", "term"] }

[target.'cfg(target_os = "macos")'.dependencies]
capsa-backend-native = { path = "../capsa-backend-native", optional = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
capsa-apple-vzd = { path = "../capsa-apple-vzd", artifact = "bin", optional = true }

[features]
default = []
blocking = []
test-utils = ["dep:serde_json", "dep:apple-main"]
vfkit = []
macos-native = ["dep:capsa-backend-native"]
macos-subprocess = ["dep:capsa-apple-vzd-ipc", "dep:tarpc", "dep:tokio-util", "dep:tokio-serde", "dep:capsa-apple-vzd"]

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
apple-main = { git = "https://github.com/luizribeiro/apple-main", rev = "6f9e44b", features = ["unstable-criterion-framework", "unstable-test-framework"] }
capsa = { path = ".", features = ["test-utils"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
dispatch = "0.2"
core-foundation = "0.10"

