[package]
name = "capsa"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A cross-platform VM runtime library for secure workload isolation"

[dependencies]
capsa-core = { path = "../core" }
capsa-sandbox-protocol = { path = "../sandbox/protocol" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
which = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { version = "1.0", optional = true }
capsa-apple-vzd-ipc = { path = "../apple/vzd-ipc", optional = true }
tarpc = { version = "0.35", features = ["serde1", "tokio1", "serde-transport", "serde-transport-bincode"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
tokio-serde = { version = "0.9", features = ["bincode"], optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "signal", "fs", "term"] }
capsa-net = { path = "../net" }

[target.'cfg(target_os = "linux")'.dependencies]
capsa-linux-kvm = { path = "../linux/kvm", optional = true }

[target.'cfg(target_os = "macos")'.build-dependencies]
capsa-apple-vzd = { path = "../apple/vzd", artifact = "bin", optional = true }

[features]
default = []
blocking = []
test-utils = ["dep:serde_json"]
macos-subprocess = ["dep:capsa-apple-vzd-ipc", "dep:tarpc", "dep:tokio-util", "dep:tokio-serde", "dep:capsa-apple-vzd"]
linux-kvm = ["dep:capsa-linux-kvm"]

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = "0.4"
criterion = { version = "0.5", features = ["async_tokio"] }
capsa = { path = ".", features = ["test-utils"] }

[target.'cfg(target_os = "macos")'.dev-dependencies]
dispatch = "0.2"
core-foundation = "0.10"

