[package]
name = "capsa-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core types and traits for capsa VM runtime"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
nix = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
