[package]
name = "capsa-net"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Userspace networking stack for capsa VM runtime"

[dependencies]
capsa-core = { path = "../core" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
heapless = "0.8"
futures = "0.3"
rand = "0.8"
socket2 = { version = "0.5", features = ["all"] }
dns-parser = "0.8"
resolv-conf = "0.7"

smoltcp = { version = "0.12", default-features = false, features = [
    "medium-ethernet",
    "proto-ipv4",
    "socket-tcp",
    "socket-udp",
    "socket-dhcpv4",
    "alloc",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
