[package]
name = "capsa-apple-vz"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Virtualization.framework backend for capsa"

[dependencies]
capsa-core = { path = "../../core" }
tokio = { workspace = true }
async-trait = { workspace = true }
nix = { version = "0.29", features = ["process", "signal", "fs"] }
objc2 = "0.6"
objc2-virtualization = "0.3"
objc2-foundation = { version = "0.3", features = ["NSData", "NSString", "NSURL", "NSError", "NSArray", "NSFileHandle"] }
block2 = "0.6"
libc = "0.2"
dispatch = "0.2"
apple-main = { git = "https://github.com/luizribeiro/apple-main", rev = "6f9e44b" }
