[package]
name = "capsa-apple-vzd-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "IPC types and service definition for capsa-apple-vzd"

[dependencies]
capsa-core = { path = "../../core" }
serde = { workspace = true }
tarpc = { version = "0.35", features = ["serde1", "tokio1", "serde-transport", "serde-transport-bincode"] }
tokio = { workspace = true }

[dev-dependencies]
serde_json = "1.0"
