[package]
name = "capsa-apple-vzd"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VM daemon for capsa subprocess backend"

[[bin]]
name = "capsa-apple-vzd"
path = "src/main.rs"

[dependencies]
capsa-core = { path = "../../core" }
capsa-apple-vz = { path = "../vz" }
capsa-apple-vzd-ipc = { path = "../vzd-ipc" }
tokio = { workspace = true }
tarpc = { version = "0.35", features = ["serde1", "tokio1", "serde-transport", "serde-transport-bincode"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.9", features = ["bincode"] }
futures = "0.3"
nix = { version = "0.29", features = ["socket", "uio"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
apple-main = { git = "https://github.com/luizribeiro/apple-main", rev = "6f9e44b" }
