[package]
name = "capsa-sandbox-init"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Init process (PID 1) for capsa sandbox VMs"

[[bin]]
name = "capsa-sandbox-init"
path = "src/main.rs"

[dependencies]
nix = { version = "0.29", features = ["process", "signal", "mount", "fs"] }
