[package]
name = "vsock-pong"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A simple ping-pong responder over vsock for testing"

# Standalone crate (not part of workspace) since it's Linux-only
[workspace]

[dependencies]
nix = { version = "0.29", features = ["socket"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
